--- a/package.json
+++ b/package.json
@@ -1,24 +1,69 @@
 {
-  "name": "my-vue-project",
+  "name": "front",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.1.2",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fullcalendar/core": "^6.1.9",
+    "@fullcalendar/timegrid": "^6.1.9",
+    "@fullcalendar/vue": "^6.1.9",
+    "axios": "^1.5.1",
+    "browser-image-compression": "^2.0.2",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "dialogflow": "^1.2.0",
+    "element-ui": "^2.15.13",
+    "firebase": "^8.10.1",
+    "font-awesome": "^4.7.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
+    "image-compressor": "^2.0.3",
+    "jspdf": "^2.5.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
+    "nodemailer": "^6.9.5",
+    "papaparse": "^5.4.1",
+    "qrcode-generator": "^1.4.4",
+    "quill": "^1.3.7",
+    "react-google-recaptcha": "^3.1.0",
+    "vue": "^2.6.14",
+    "vue-auth0-handler": "^1.1.2",
+    "vue-google-oauth2": "^1.5.10",
+    "vue-html2pdf": "^1.8.0",
+    "vue-js-modal": "^2.0.1",
+    "vue-pagination-2": "^3.1.0",
+    "vue-qrcode-reader": "^5.3.4",
+    "vue-quill-editor": "^3.0.6",
+    "vue-recaptcha": "^2.0.3",
+    "vue-router": "^2.8.1",
+    "vue-toastification": "^1.7.14",
+    "vuex": "^2.5.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
+    "@babel/core": "^7.22.20",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/preset-env": "^7.22.20",
+    "@vue/babel-preset-app": "^5.0.8",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-unit-jest": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^1.3.6",
+    "@vue/vue2-jest": "^27.0.0-alpha.2",
+    "axios-mock-adapter": "^1.22.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^27.5.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "jest": "^27.5.1",
+    "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
@@ -33,7 +78,18 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {},
+    "overrides": [
+      {
+        "files": [
+          "**/__tests__/*.{j,t}s?(x)",
+          "**/tests/unit/**/*.spec.{j,t}s?(x)"
+        ],
+        "env": {
+          "jest": true
+        }
+      }
+    ]
   },
   "browserslist": [
     "> 1%",
