--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.5.1",
     "browser-image-compression": "^2.0.2",
     "core-js": "^3.8.3",
+    "crypto-browserify": "^3.12.0",
     "dialogflow": "^1.2.0",
     "element-ui": "^2.15.13",
     "firebase": "^8.10.1",
